deployments.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-playground
        component: test-app
    spec:
      containers:
      - name: test-app
        image: thomasraynal/kubernetesplayground:v1
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 80
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 5  
        #   periodSeconds: 10
        imagePullPolicy : Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-playground
        component: test-api
    spec:
      containers:
      - name: test-api
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 80
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 5
        #   periodSeconds: 10
        image: thomasraynal/kubernetesplayground-api:v1
        imagePullPolicy : Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-playground
        component: mongodb
    spec:
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
      containers:
      - image: mongo
        name: mongodb
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        ports:
        - containerPort: 27017
          protocol: TCP
