services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: test-app
---
apiVersion: v1
kind: Service
metadata:
  name: test-api
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: test-api
